Added log tracking in all services and added the getFullName method in the user entity