@@ -3,14 +3,15 @@ package com.itic.intranet.services.implementations;
 import com.itic.intranet.dtos.UserResponseDto;
 import com.itic.intranet.helpers.EntityHelper;
 import com.itic.intranet.mappers.UserMapper;
-import com.itic.intranet.models.mysql.User;
+import com.itic.intranet.models.mysql.Role;
 import com.itic.intranet.repositories.UserRepository;
+import com.itic.intranet.services.LogService;
 import com.itic.intranet.services.RolePropertyService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -19,13 +20,25 @@ public class RolePropertyServiceImpl implements RolePropertyService {
     private final UserRepository userRepository;
     private final UserMapper userMapper;
     private final EntityHelper entityHelper;
+    private final LogService logService;
 
     @Override
     public List<UserResponseDto> getRoleUsers(Long roleId) {
-        entityHelper.getRole(roleId);
-        List<User> users = userRepository.findByRole_Id(roleId);
-        return users.stream()
+        Role role = entityHelper.getRole(roleId);
+        List<UserResponseDto> usersRole = userRepository.findByRole_Id(roleId)
+                .stream()
                 .map(userMapper::convertEntityToResponseDto)
-                .collect(Collectors.toList());
+                .toList();
+        logService.info(
+                "SYSTEM",
+                "GET_USERS_OF_ROLE",
+                "Getting users of role",
+                Map.of(
+                        "roleId", roleId,
+                        "roleType", role.getRoleType(),
+                        "resultCount", usersRole.size()
+                )
+        );
+        return usersRole;
     }
 }
